# notebook

./: .gitignore  .tmuxp.yaml  CONTRIBUTING.MD  Cargo.toml  LICENSE  README.md  devbox.json  notebook.db  notebook.db-shm  notebook.db-wal  postgresql.conf
agent/: go.mod  server.go  template.mjs
api_tests/: app.test.js  env.js  notebook.test.js  notebooks.test.js  package-lock.json  package.json
data/: README.md
ideas/: API.md  DB_schema.md  Versioning.md
linux/: README.md  build.sh  build_agent.sh  download_dependencies.sh  download_vmlinux.sh  make_rootfs.sh  openrc-service.sh  setup_alpine.sh
src/: api.rs  app_state.rs  bootstrap.rs  db.rs  main.rs  utils.rs
src/models/: mod.rs
src/models/firecracker/: mod.rs
src/models/notebook/: api_handlers.rs  db.rs  model.rs
src/models/notebook_version/: db.rs  mod.rs
src/models/paragraph/: api_handlers.rs  db.rs  mod.rs  model.rs
src/models/paragrpah/: db.rs
src/models/secret/: db.rs
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  index.css  main.tsx  reset.css
web/src/components/CreateNotebookCard/: create-notebook-card.css  index.tsx
web/src/components/CreateNotebookForm/: create-ntoebook-form.css  index.tsx
web/src/components/Notebook/: index.tsx
web/src/components/NotebookCard/: index.tsx  notebook-card.css
web/src/components/Paragraph/: index.tsx
web/src/routes/: CreateNotebook.tsx  Notebook.tsx  NotebookSettings.tsx  NotebookView.tsx  Notebooks.tsx  Router.tsx  notebooks.css
web/src/types/: index.tsx
