[package]
name = "notebook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
firepilot = "1.2.0"
sqlx = {version = "0.8", features = [ "runtime-tokio", "sqlite" ]}
tokio = {version="1.39.2", features=["full"]}
tower-http = {version="0.5.2", features=["trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
