[package]
name = "notebook"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
firepilot = "1.2.0"
futures = "0.3.30"
serde = { version="1.0.208", features=["derive"]}
serde_json = "1.0.125"
sqlx = {version = "0.8", features = [ "runtime-tokio", "sqlite", "macros" ]}
tokio = {version="1.39.2", features=["full"]}
tower-http = {version="0.5.2", features=["trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
